Add initial serial messaging features
